--- a/config.toml
+++ b/config.toml
@@ -595,7 +595,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # Permalinks config
 [Permalinks]
   # posts = ":year/:month/:filename"
-  posts = ":filename"
+  posts = ":year/:month/:slug"
 
 # Privacy config
 [privacy]
